tests/miz/pass/types/pass_type_elaboration_local_object_mode_reserved_variable_membership_001.miz
definition
  mode LocalObjectModeMembershipDef: LocalObjectModeMembership is object;
end;

reserve x for LocalObjectModeMembership;
reserve y for set;
theorem LocalObjectModeReservedVariableMembershipPayloadBoundary: x in y;
